--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,8 @@
-on: [push]
+name: When a push occurs in the master branch, a private message is sent on the Whatsapp.
+on:
+  push:
+    branches: 
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
