--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: whatsapp-notify
-        id: whatsapp-notify
+      - uses: actions/checkout@v1
+      - name: install twilio
+        run: pip install twilio
+      - name: run code
+        run: python main.py
         env:
           account_sid: AC4f1a76e169636c1c414b25eb57118b36
           auth_token: 90b8c29b1bac7c5f0ef5a64f34d895bb
